Id 중복확인 수정

--- a/WebContent/views/member/find.html
+++ b/WebContent/views/member/find.html
@@ -58,7 +58,7 @@
       <input type="email" class="form-control" id="email" placeholder="이메일 입력" name="email">
     </div>
           <button type="submit" class="btn btn-primary">검색</button>
-          <a class="btn btn-primary" href="sign_in.html">로그인</a>
+          <a class="btn btn-primary" href="/views/member/login.html">로그인</a>
         </form>
     </div>
     <div class="col-sm-6">
