--- a/WebContent/views/member/find.html
+++ b/WebContent/views/member/find.html
@@ -52,12 +52,12 @@
   <div class="row">
     <div class="col-sm-6">
       <h2>아이디 찾기</h2>
-      <form action="/find_id.do" method="post">
+      <form method="post">
         <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" class="form-control" id="email" placeholder="이메일 입력" name="email">
+      <input type="email" class="form-control" id="idEmail" placeholder="이메일 입력" name="email">
     </div>
-          <button type="submit" class="btn btn-primary">검색</button>
+          <button type="submit" class="btn btn-primary" id="idCheck" onclick="return false">검색</button>
           <a class="btn btn-primary" href="/views/member/login.html">로그인</a>
         </form>
     </div>
@@ -66,15 +66,15 @@
       <form action="/find_pw.do" method="post">
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="이메일 입력" name="email">
+            <input type="email" class="form-control" id="pwdEmail" placeholder="이메일 입력" name="email">
         </div>
         <div class="form-group">
             <label for="pwd">Phone</label>
-            <input type="phone" class="form-control" id="pwd" placeholder="전화번호 입력" name="phone">
+            <input type="phone" class="form-control" id="Phone" placeholder="전화번호 입력" name="phone">
         </div>
         <input type="hidden" id="password" name="password"/>
         
-        <button type="submit" class="btn btn-primary" onclick="return find();">비밀번호 수정</button>
+        <button type="submit" class="btn btn-primary" onclick="return find();" id="pwdCheck">비밀번호 수정</button>
     </form>
     </div>
 </div>
@@ -83,7 +83,49 @@
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Footer</p>
 </div>
-</body>
-</html>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!-- jQuery 선언 -->
+
+<script>
+	$(function(){
+		$("#idCheck").click(function(){
+			var email = $("#idEmail").val();
+			$.ajax({
+				url : "/find_id.do",
+				data : {email:email},
+				type : "post",
+				success : function(data){
+					alert("ID : "+data);
+				},
+				error : function(){
+					alert("문제가 발생하였습니다. 지속적으로 문제 발생 시 관리자에게 문의 바랍니다.");
+				}
+			});
+		});
+		$("#pwdCheck").click(function(){
+			var email = $("#pwdEmail").val();
+			var phone = $("#phone").val();
+			var password = $("#password").val();
+			$.ajax({
+				url : "/find_pw.do",
+				data : {email:email, phone:phone, password:password},
+				type : "post",
+				success : function(result){
+					var result = result;
+					if(result==0){
+						alert("수정완료");
+					}
+					else if(result==1){
+						alert("이메일과 전화번호를 다시 입력해주세요.");
+					}
+				},
+				error : function(){
+					alert("문제가 발생하였습니다. 지속적으로 문제 발생 시 관리자에게 문의 바랍니다.");
+				}
+			});
+		});
+	});
+</script>
+
 </body>
 </html>
