--- a/WebContent/views/member/find.html
+++ b/WebContent/views/member/find.html
@@ -63,19 +63,19 @@
     </div>
     <div class="col-sm-6">
       <h2>비밀번호 찾기</h2>
-      <form action="/find_pw.do" method="post">
+   
         <div class="form-group">
             <label for="email">Email</label>
             <input type="email" class="form-control" id="pwdEmail" placeholder="이메일 입력" name="email">
         </div>
         <div class="form-group">
             <label for="pwd">Phone</label>
-            <input type="phone" class="form-control" id="Phone" placeholder="전화번호 입력" name="phone">
+            <input type="phone" class="form-control" id="phone" placeholder="전화번호 입력" name="phone">
         </div>
         <input type="hidden" id="password" name="password"/>
         
-        <button type="submit" class="btn btn-primary" onclick="return find();" id="pwdCheck">비밀번호 수정</button>
-    </form>
+        <button type="submit" class="btn btn-primary"  id="pwdCheck">비밀번호 수정</button>
+   
     </div>
 </div>
 </div>
@@ -105,17 +105,19 @@
 		$("#pwdCheck").click(function(){
 			var email = $("#pwdEmail").val();
 			var phone = $("#phone").val();
-			var password = $("#password").val();
+			var password = window.prompt("수정할 비밀번호 입력");
+            console.log(password);
+            
 			$.ajax({
 				url : "/find_pw.do",
 				data : {email:email, phone:phone, password:password},
 				type : "post",
 				success : function(result){
 					var result = result;
-					if(result==0){
+					if(result==1){
 						alert("수정완료");
 					}
-					else if(result==1){
+					else if(result==0){
 						alert("이메일과 전화번호를 다시 입력해주세요.");
 					}
 				},
