--- a/WebContent/views/member/login.html
+++ b/WebContent/views/member/login.html
@@ -63,7 +63,10 @@
   <p>Footer</p>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!-- jQuery 선언 -->
+
 <script>
+	
 	function login(){
 		var userId = document.getElementById("userId").value;
 		var userPwd = document.getElementById("userPwd").value;
