카카오톡 모아보기 및 로그인 이후 헤더 추가

--- a/WebContent/views/member/login.html
+++ b/WebContent/views/member/login.html
@@ -85,7 +85,7 @@
 				success : function(isMember){
 					if(isMember == "1"){
 						alert("로그인 성공");
-						location.href="/views/project/projectList.jsp";
+						location.href="/projectList.do";
 					}
 					else{
 						alert("ID와 비밀번호를 다시 확인해 주세요.");
