회원탈퇴 변경

--- a/WebContent/views/member/login.html
+++ b/WebContent/views/member/login.html
@@ -84,7 +84,7 @@
 				type : "post",
 				success : function(isMember){
 					if(isMember == "1"){
-						alert("로그인 성공");
+						alert("환영합니다");
 						location.href="/views/project/projectList.jsp";
 					}
 					else{
